--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body,html {
   height: calc(100vh);
 }
 h1{
+  width:100%;
   font-family: 'gilroy' !important;
   text-transform: uppercase;
   margin-bottom:0 !important;
@@ -30,6 +31,8 @@ overflow:scroll;
 }
 .rating {
   font-size:2em;
+  font-family:'gilroy';
+  text-transform: uppercase;
 }
 .pageContent{
   padding: 0 1.5rem 0 1.5rem !important;
